Tạo class cho hoa_don

--- a/bin/db.properties
+++ b/bin/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-server=jdbc\:mysql\://stevie.heliohost.org\:3306/yukito_qlHangHoa?characterEncoding\=UTF-8&noAccessToProcedureBodies\=true
+server=jdbc\:mysql\://stevie.heliohost.org\:3306/yukito_qlHangHoa?characterEncoding\=UTF-8&useInformationSchema\=true
 user=yukito
 pass=123456
