--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//Document/MYSQL.txt=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/DAO/Connect.java=UTF-8
+encoding//src/vn/ChuVoiCon/qlHangHoa/UI/conTestChay.java=UTF-8
