Jfram Phieu Nhap + Kho

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,3 +8,4 @@ encoding//src/vn/ChuVoiCon/qlHangHoa/DAO/hoa_donDAO.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/FormDangNhap.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/Kho.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/conTestChay.java=UTF-8
+encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jfKho.java=UTF-8
