--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,5 +9,8 @@ encoding//src/vn/ChuVoiCon/qlHangHoa/UI/FormDangNhap.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/FormMainNhanVien.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/Kho.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/conTestChay.java=UTF-8
+encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jfChiTietSanPham.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jfKho.java=UTF-8
+encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jfLoaiSanPham.java=UTF-8
+encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jfNhaCungCap.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jfThemNhanVien.java=UTF-8
