--- a/src/db.properties
+++ b/src/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-server=jdbc\:mysql\://localhost\:3306/qlHangHoa?characterEncoding\=UTF-8
-user=root
-pass=
+server=jdbc\:mysql\://stevie.heliohost.org\:3306/yukito_qlHangHoa?characterEncoding\=UTF-8
+user=yukito_qlHangHoa
+pass=qlHangHoa
