--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,8 @@ encoding//src/vn/ChuVoiCon/qlHangHoa/DAO/hoa_donDAO.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/FormDangNhap.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/FormMainNhanVien.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/conTestChay.java=UTF-8
+encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jTEST.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jfKho.java=UTF-8
+encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jfMain.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jfPhieuNhapKho.java=UTF-8
 encoding//src/vn/ChuVoiCon/qlHangHoa/UI/jfThemNhanVien.java=UTF-8
